Added flex-* CSS keywords

--- a/demo.html
+++ b/demo.html
@@ -74,6 +74,11 @@ div.highlight ul.tabs li.active {
 	border-bottom: none;
 	cursor: default;
 }
+div.element {
+	flex-direction: row;
+	flex-wrap: nowrap;
+	flex-flow: column-reverse wrap;
+}
 </pre>
 
 <h2>HTML code</h2>
