--- a/demo.html
+++ b/demo.html
@@ -223,6 +223,13 @@ foreach ($a as $v1) {
 foreach (array(1, 2, 3, 4, 5) as $v) {
     echo "$vn";
 }
+
+// This is a one-line c++ style comment
+
+/* This is a multi line comment
+yet another line of comment */
+
+# This is a one-line shell-style comment
 </pre>
 
 <h2>JS code (default)</h2>
@@ -234,19 +241,19 @@ $(document).ready(function(){
 	
 	//change boxes opacity on hover
 	$('#login').hover(function(){
-		$("#login").animate({'opacity': '1'}, 200);
-		$("#member").animate({'opacity': '0.52'}, 200);
+		$('#login').animate({'opacity': '1'}, 200);
+		$('#member').animate({'opacity': '0.52'}, 200);
 	});
 	$('#member').hover(function(){
-		$("#member").animate({'opacity': '1'}, 200);
-		$("#login").animate({'opacity': '0.52'}, 200);
+		$('#member').animate({'opacity': '1'}, 200);
+		$('#login').animate({'opacity': '0.52'}, 200);
 	});
 	
 	//request membership expand
 	$('#request_membership').click(function(){
 		$('#member_request > div:first').css('display', 'none');
 		$('#member_request > div:last').css('display', 'block');
-		$("#login").css('display', 'none');
+		$('#login').css('display', 'none');
 		return false;
 	});
 	
@@ -254,7 +261,7 @@ $(document).ready(function(){
 	$('#back').click(function(){
 		$('#member_request > div:first').css('display', 'block');
 		$('#member_request > div:last').css('display', 'none');
-		$("#login").css('display', 'block');
+		$('#login').css('display', 'block');
 		return false;
 	});
 	
